test/io/sungeun/ioerror.EINVAL.good
ioerror.chpl:8: error: uncaught error - Invalid argument EINVAL with path "this/is/my/path"
